bat.bool1.sumdouble.SumDouble.scala.error
Erreur de compilation :
SumDouble:5: error: not found: value i
    case _ => return i+y
                     ^SumDouble:5: error: not found: value y
    case _ => return i+y
                       ^